--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1056,5 +1056,7 @@
   "UserCard.showFullBioLink": "more",
   "UserCard.viewProfileLink": "View profile",
   "UserDisplayName.banned": "Banned user",
-  "UserDisplayName.deleted": "Deleted user"
+  "UserDisplayName.deleted": "Deleted user",
+  "MainPanel.mapTogglerHide": "Hide Map",
+  "MainPanel.mapTogglerShow": "Show Map"
 }
