feature: A new listing for equipment - added a "Add new Equipment" button to the top bar. - Added a General tab for Equipment Listing creation. - An equipment listing can be created but not yet displayed correctly in its listing page.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -222,9 +222,9 @@
   "EditListingPoliciesPanel.createListingTitle": "Time to set some ground rules for the bathers.",
   "EditListingPoliciesPanel.title": "Edit the rules of {listingTitle}",
   "EditListingPricingForm.priceInputPlaceholder": "Choose your price…",
-  "EditListingPricingForm.pricePerDay": "Price per day in euros",
-  "EditListingPricingForm.pricePerNight": "Price per night in euros",
-  "EditListingPricingForm.pricePerUnit": "Price per unit in euros",
+  "EditListingPricingForm.pricePerDay": "Price per day in dollars (USD)",
+  "EditListingPricingForm.pricePerNight": "Price per night in dollars (USD)",
+  "EditListingPricingForm.pricePerUnit": "Price per unit in dollars (USD)",
   "EditListingPricingForm.priceRequired": "You need to add a valid price.",
   "EditListingPricingForm.priceTooLow": "Price should be at least {minPrice}.",
   "EditListingPricingForm.showListingFailed": "Fetching listing data failed",
@@ -232,6 +232,45 @@
   "EditListingPricingPanel.createListingTitle": "How much does it cost?",
   "EditListingPricingPanel.listingPriceCurrencyInvalid": "Listing currency is different from the marketplace currency. You cannot edit the price.",
   "EditListingPricingPanel.title": "Edit the pricing of {listingTitle}",
+
+  "EditEquipmentListingGeneralPanel.title": "Edit details of {listingTitle}",
+  "EditEquipmentListingGeneralPanel.createListingTitle": "Add your equipment",
+  "EditEquipmentListingGeneralForm.title": "The name of your equipment",
+  "EditEquipmentListingGeneralForm.titlePlaceholder": "What's the name of your equipment?",
+  "EditEquipmentListingGeneralForm.titleRequired": "You need to add a name.",
+  "EditEquipmentListingGeneralForm.maxLength": "Must be {maxLength} characters or less",
+  "EditEquipmentListingGeneralForm.description": "Describe your equipment",
+  "EditEquipmentListingGeneralForm.descriptionPlaceholder": "What is its purpose? How well can it achieve that purpose? And other things.",
+  "EditEquipmentListingGeneralForm.descriptionRequired": "A description is required.",
+  "EditEquipmentListingGeneralForm.types": "Specify the type(s) of your equipment",
+  "EditEquipmentListingGeneralForm.typesRequired": "You need specify at least one type for your equipment.",
+  "EditEquipmentListingGeneralForm.manufactureYear": "The year your equipment was manufactured",
+  "EditEquipmentListingGeneralForm.manufactureYearRequired": "You need to add the manufacture year",
+  "EditEquipmentListingGeneralForm.manufactureYearRange": "Your equipment must be manufactured within {min} and {max}",
+  "EditEquipmentListingGeneralForm.maxUsesPerDay": "How many time it can be used a day (for one booking)",
+  "EditEquipmentListingGeneralForm.maxUsesPerDayRequired": "You need to add the maximum times your equipment can be used per day",
+  "EditEquipmentListingGeneralForm.maxUsesPerDayRange": "Max use per day mist be between {min} and {max}",
+  "EditEquipmentListingLocationPanel.title": "Edit the pickup location of {listingTitle}",
+  "EditEquipmentListingLocationPanel.createListingTitle": "Where can a customer pick up your equipment?",
+  "EditEquipmentListingPricingPanel.title": "Edit the pricing of {listingTitle}",
+  "EditEquipmentListingPricingPanel.createListingTitle": "How much does it cost to rent the equipment?",
+  
+  "EditEquipmentListingWizard.saveEditGeneral": "Save General Details",
+  "EditEquipmentListingWizard.saveEditLocation": "Save location",
+  "EditEquipmentListingWizard.saveEditAvailability": "Save availability",
+  "EditEquipmentListingWizard.saveEditPhotos": "Save photos",
+  "EditEquipmentListingWizard.saveEditPricing": "Save pricing",
+  "EditEquipmentListingWizard.saveNewGeneral": "Next: Location",
+  "EditEquipmentListingWizard.saveNewLocation": "Next: Pricing",
+  "EditEquipmentListingWizard.saveNewPricing": "Next: Availability",
+  "EditEquipmentListingWizard.saveNewAvailability": "Next: Photos",
+  "EditEquipmentListingWizard.saveNewPhotos": "Publish Listing",
+  "EditEquipmentListingWizard.tabLabelGeneral": "General",
+  "EditEquipmentListingWizard.tabLabelLocation": "Location",
+  "EditEquipmentListingWizard.tabLabelPricing": "Pricing",
+  "EditEquipmentListingWizard.tabLabelAvailability": "Availability",
+  "EditEquipmentListingWizard.tabLabelPhotos": "Photos",
+
   "EditListingWizard.payoutModalInfo": "Almost done! In order to send you money, we need to know a bit more about you. Next, we will guide you through verifying your account. The details can also be edited from Account Setting page on Payout details tab. ",
   "EditListingWizard.payoutModalTitleOneMoreThing": "One more thing:",
   "EditListingWizard.payoutModalTitlePayoutPreferences": "Payout preferences",
@@ -984,6 +1023,7 @@
   "Topbar.searchIcon": "Open search",
   "TopbarDesktop.accountSettingsLink": "Account settings",
   "TopbarDesktop.createListing": "+ Add your sauna",
+  "TopbarDesktop.createListingEquipment": "+ Add your equipment",
   "TopbarDesktop.inbox": "Inbox",
   "TopbarDesktop.login": "Log in",
   "TopbarDesktop.logo": "Saunatime",
@@ -997,6 +1037,7 @@
   "TopbarMobileMenu.loginLink": "Log in",
   "TopbarMobileMenu.logoutLink": "Log out",
   "TopbarMobileMenu.newListingLink": "+ Add your sauna",
+  "TopbarMobileMenu.newEquipmentListingLink": "+ Add your equipment",
   "TopbarMobileMenu.profileSettingsLink": "Profile settings",
   "TopbarMobileMenu.signupLink": "Sign up",
   "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
