Feature: Implement view listing page for equipment - Sauna and Equipment listing page use the same component ListingPage to show listing details with each type having shared and custom sections. - Remove EditEquipmentListingAvailabilityForm folder because it was identical to EditListingAvailableForm and not required to implement Availability tab for Equipment listings.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -401,7 +401,7 @@
   "ListingPage.bookingTitle": "Book {title}",
   "ListingPage.closedListing": "This listing has been closed and can't be booked.",
   "ListingPage.contactUser": "Contact",
-  "ListingPage.descriptionTitle": "About this sauna",
+  "ListingPage.descriptionTitle": "About this {listingType}",
   "ListingPage.editListing": "Edit listing",
   "ListingPage.editProfileLink": "Edit profile",
   "ListingPage.errorLoadingListingMessage": "Could not load listing. Please try again.",
@@ -425,6 +425,12 @@
   "ListingPage.schemaTitle": "{title} - {price} | {siteTitle}",
   "ListingPage.viewImagesButton": "View photos ({count})",
   "ListingPage.yourHostHeading": "Your host",
+
+  "EquipmentListingPage.typesTitle": "Equipment Types",
+  "EquipmentListingPage.manufactureYearTitle": "Manufacture Year",
+  "EquipmentListingPage.maxUsesPerDayTitle": "Max use times a day",
+  "EquipmentListingPage.locationTitle": "Pickup Location",
+
   "LoadableComponentErrorBoundaryPage.title": "Page not fetched",
   "LoadableComponentErrorBoundaryPage.heading": "Oops, we couldn't fetch the page.",
   "LoadableComponentErrorBoundaryPage.description": "It looks like the app needs to be updated! Please, refresh the current page or go back to {link}.",
@@ -795,8 +801,9 @@
   "SearchResultsPanel.nextPage": "Next page",
   "SearchResultsPanel.previousPage": "Previous page",
   "SectionHero.browseButton": "Browse saunas",
-  "SectionHero.subTitle": "The largest online community to rent saunas in Finland.",
-  "SectionHero.title": "Book saunas everywhere.",
+  "SectionHero.browseEquipmentButton": "Browse equipment",
+  "SectionHero.subTitle": "The largest online community to rent saunas and equipment in Finland.",
+  "SectionHero.title": "Book saunas and equipment everywhere.",
   "SectionHowItWorks.createListingLink": "PS. You can also become a Saunatime host in just a few clicks!",
   "SectionHowItWorks.part1Text": "Start by searching for a location. Once you find a sauna you like, simply check the availability, book it, and make a secure payment right away.",
   "SectionHowItWorks.part1Title": "1. Browse and book",
