Refactor: Refactor URLs and remove console.logs - Change edit listing and view listing urls for both sauna and equipment types. They use the same component (EditListingPage for edit and ListingPage for view listing), EditListingPage receive an extra param (listingType) to determine which listing wizard to use, and ListingPage check the listing own lisingType publicData instead. - Remove console.log() commands used for debugging.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -209,7 +209,7 @@
   "EditListingPhotosForm.imageTypes": ".JPG, .GIF or .PNG. Max. 20 MB",
   "EditListingPhotosForm.imageUploadFailed.uploadFailed": "Failed to upload image. Please check that the image wasn't too big and try again.",
   "EditListingPhotosForm.imageUploadFailed.uploadOverLimit": "The maximum file size is 20 MB. Please try again.",
-  "EditListingPhotosForm.publishListingFailed": "Publishing a new sauna failed",
+  "EditListingPhotosForm.publishListingFailed": "Publishing a new {listingType} failed",
   "EditListingPhotosForm.savedImageAltText": "Saved listing image",
   "EditListingPhotosForm.showListingFailed": "Fetching listing data failed",
   "EditListingPhotosForm.updateFailed": "Failed to update listing. Please try again.",
@@ -254,6 +254,10 @@
   "EditEquipmentListingLocationPanel.createListingTitle": "Where can a customer pick up your equipment?",
   "EditEquipmentListingPricingPanel.title": "Edit the pricing of {listingTitle}",
   "EditEquipmentListingPricingPanel.createListingTitle": "How much does it cost to rent the equipment?",
+  "EditEquipmentListingPhotosForm.addImagesTip": "Tip: Choose one main image with the overall look of the equipment, and other images showing it in action",
+  "EditEquipmentListingPhotosForm.chooseImage": "+ Choose an image…",
+  "EditEquipmentListingPhotosForm.mainImageTitle": "Upload one main image",
+  "EditEquipmentListingPhotosForm.otherImagesTitle": "Upload other related images",
   
   "EditEquipmentListingWizard.saveEditGeneral": "Save General Details",
   "EditEquipmentListingWizard.saveEditLocation": "Save location",
@@ -359,6 +363,7 @@
   "Footer.toFAQPage": "FAQ",
   "Footer.toHelpPage": "Help",
   "Footer.toNewListingPage": "Add your sauna",
+  "Footer.toNewEquipmentListingPage": "Add your equipment",
   "ImageCarousel.imageAltText": "Listing image {index}/{count}",
   "ImageFromFile.couldNotReadFile": "Could not read file",
   "InboxPage.fetchFailed": "Could not load all messages. Please try again.",
