Features: Equipment Search Filters - Changed manufactureYear and maxUsesPerDay data type from String to Number for indexing search params as type long. - Merge 2 previous filter arrays (filters and equipmentFilters) into one to remove duplicate filter items (price, dates, keywords, listingType). - Create a RangeFilter component for filter with range sliders (type long) like price, manufactureYear, and maxUsesPerDay. - Listings can now be filtered by listingType of either 'equipment' or 'sauna' (although many sauna listings created long ago would not have listingType 'sauna'). - Equipment listings can now be filtered by equipment types, manufactureYear, and max use times per day.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -714,14 +714,14 @@
   "PayoutDetailsForm.stripeToSText": "By saving details, you agree to the {stripeConnectedAccountTermsLink}",
   "PayoutDetailsForm.submitButtonText": "Save details & publish listing",
   "PayoutDetailsForm.title": "One more thing: payout preferences",
-  "PriceFilter.clear": "Clear",
-  "PriceFilter.label": "Price",
-  "PriceFilter.labelSelectedPlain": "Price: {minPrice} - {maxPrice}",
-  "PriceFilter.labelSelectedButton": "{minPrice} - {maxPrice}",
-  "PriceFilterForm.cancel": "Cancel",
-  "PriceFilterForm.clear": "Clear",
-  "PriceFilterForm.label": "Price range:",
-  "PriceFilterForm.submit": "Apply",
+  "RangeFilter.clear": "Clear",
+  "RangeFilter.label": "{label}",
+  "RangeFilter.labelSelectedPlain": "{label}: {minRange} - {maxRange}",
+  "RangeFilter.labelSelectedButton": "{minRange} - {minRange}",
+  "RangeFilterForm.cancel": "Cancel",
+  "RangeFilterForm.clear": "Clear",
+  "RangeFilterForm.label": "Price range:",
+  "RangeFilterForm.submit": "Apply",
   "PrivacyPolicyPage.heading": "Saunatime Privacy Policy",
   "PrivacyPolicyPage.privacyTabTitle": "Privacy Policy",
   "PrivacyPolicyPage.schemaTitle": "Privacy Policy | {siteTitle}",
